# quest-navigator-library-android

./: .classpath  .gitignore  .project  AndroidManifest.xml  build.gradle  import-summary.txt  settings.gradle
QuestNavigatorLibrary/: .gitignore  build.gradle  proguard-rules.pro
QuestNavigatorLibrary/src/main/: AndroidManifest.xml
QuestNavigatorLibrary/src/main/assets/www/: gamePG_default.html
QuestNavigatorLibrary/src/main/jni/: CMakeLists.txt  androidqspwrapper.c
QuestNavigatorLibrary/src/main/jni/qsp/: mathops.c  qsp.h
QuestNavigatorLibrary/src/main/jni/qsp/bindings/android/: android_control.c
QuestNavigatorLibrary/src/main/jni/qsp/bindings/java/: java_callbacks.c
QuestNavigatorLibrary/src/main/res/xml/: config.xml
jni/: androidqspwrapper.c
jni/qsp/: callbacks.h  mathops.h
jni/qsp/bindings/android/: android.h  android_callbacks.c  android_coding.c
jni/qsp/bindings/default/: default_callbacks.c
libs/armeabi/: .gitignore
res/values/: strings.xml
res/xml/: config.xml
